[package]
name = "web2pdf_lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A wrapper around chromiumoxide that allows for a more streamlined experience when creating PDFs"
readme = "README.md"
keywords = ["chrome", "automation", "pdf"]
categories = ["web-programming"]
homepage = "https://github.com/Nathan-Mossaad/web2pdf"
repository = "https://github.com/Nathan-Mossaad/web2pdf"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread"] }
futures = "0.3"
chromiumoxide = { version = "0.7", features = [
    "tokio-runtime",
], default-features = false }
tracing = "0.1"
